# rsk

./: .env.example  .gitignore  ARCHITECTURE_RU.md  Dockerfile  KALI_COMPATIBILITY_REPORT.md  PLAN_REVIEW_RU.md  PROJECT_AUDIT_RU.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  sa  vite.config.js
as/: WebVideoActiveX.ocx
docker/: entrypoint.sh
docs/: coverage_matrix_v1.json  coverage_matrix_v1.md  knowledge_vault_schema_v1.json  kv_dual_write_v1.json  kv_dual_write_v2.json  (+161 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: HyperionUniversalModule.jsx  agent_minimal.rs  anomaly_detector.rs  api_fuzzer.rs  archive.rs  archive_ai.rs  archive_capture.rs  asset_discovery.rs  attack_graph.rs  auditor.rs  bas_engine.rs  breach_analyzer.rs  broker.rs  camera_discovery.rs  campaign.rs  capability_adapter.rs  cloud_auditor.rs  compliance_checker.rs  container_auditor.rs  context_learner.rs  continuous_monitor.rs  core_types.rs  credential_auditor.rs  cve_predictor.rs  cvss.rs  device_metadata.rs  exploit_searcher.rs  exploit_verifier.rs  feedback_store.rs  ffmpeg.rs  firmware_analyzer.rs  firmware_intelligence.rs  ftp_engine.rs  ftp_scanner.rs  fuzzer.rs  graph_read_analytics.rs  graph_writer.rs  hash_cracker.rs  html_report.rs  hub_search.rs  (+44 more)
src-tauri/src/agents/: authorization.rs  auto_pipeline.rs  exploit_verify_agent.rs  handoff.rs  mod.rs  recon_agent.rs  risk_agent.rs  scan_agent.rs
src-tauri/src/playbook/: executor.rs  mod.rs  parser.rs  steps.rs
src-tauri/src/src/: main.rs
(+162 files in other folders)
