[package]
name = "hyperion"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
aes-gcm = "0.10"
sha2 = "0.10"
sha1 = "0.10"
machine-uid = "0.3"
zeroize = "1.7"

# ОБНОВЛЕНО: Добавлен stream для скачивания больших файлов

# ОБНОВЛЕНО: Библиотека для работы с потоками reqwest
futures-util = "0.3"
futures = "0.3"
tokio-tungstenite = "0.24"

regex = "1.10"
scraper = "0.19"
sled = "0.34"
urlencoding = "2.1"
# МОДУЛИ "ПАУКА":
chrono = "0.4"
dotenv = "0.15"

# Библиотеки для работы FTP и сериализации
serde = { version = "1.0", features = ["derive"] }
suppaftp = "5.3"

reqwest = { version = "0.11", features = ["json", "cookies", "stream"] }
digest_auth = "0.3"
rand = "0.8.5"
ort = { version = "2.0.0-rc.2", features = ["ndarray"] }
ndarray = "0.15.6"
